--- a/index.html
+++ b/index.html
@@ -3,13 +3,19 @@
   <head>
     <title>Minesweeper</title>
     <link rel="stylesheet" href="minesweeper.css">
-    <script src="lib/tests.js"></script>
-    <script src="lib/lib.js"></script>
-    <script src="minesweeper.js"></script>
   </head>
   <body>
     <div id="message"></div>
     <div id="notes"></div>
+    
+    <div class="container">
+      <button class="reset">New Game</button>
+      <button class="toggle" onclick="toggleSize()">Toggle size</button>
+    </div>
     <div class="board"></div>
+
+    <script src="lib/tests.js"></script>
+    <script src="lib/lib.js"></script>
+    <script src="minesweeper.js"></script>
   </body>
 </html>
